add Review Section

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,10 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"]
-    },
+    // "baseUrl": "./",
+    // "paths": {
+    //   "@/*": ["src/*"]
+    // },
 
     /* Bundler mode */
     "isolatedModules": true,
